# piet

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.md  doc.sh  dox.cfg  index.html  params.json  piet.pro
doc/: Doxyfile.in  classes.xmi
doc/html/: annotated.html  classPBlockManager-members.html  classPBlockManager.html  classPCalcStack-members.html  classPCalcStack.html  classPCodePointer-members.html  classPCodePointer.html  classPCodeStats.html  classPColorManager-members.html  classPColorManager.html  classPConsole-members.html  classPConsole.html  classPVirtualMachine-members.html  classPVirtualMachine.html  classes.html  debug_8h-source.html  debug_8h.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main.html  pblockmanager_8cpp.html  pblockmanager_8h-source.html  pblockmanager_8h.html  pcalcstack_8cpp.html  pcalcstack_8h-source.html  pcalcstack_8h.html  pcodepointer_8cpp.html  pcodepointer_8h-source.html  pcodepointer_8h.html  pcodestats_8h-source.html  (+18 more)
doc/latex/: annotated.tex  classPBlockManager.tex  classPCalcStack.tex  classPCodePointer.tex  classPCodeStats.tex  classPColorManager.tex  classPConsole.tex  classPVirtualMachine.tex  debug_8h.tex  (+21 more)
src/: CMakeLists.txt  console.cpp  debug.h  gui.cpp  test.cpp
src/gui/: Author.cpp  Author.h  Author.ui  CMakeLists.txt  ChildWindow.cpp  ChildWindow.h  WorkspaceWindow.cpp  WorkspaceWindow.h  WorkspaceWindow.ui  application.qrc  child_window.cpp  child_window.h  gui.pro  machine_widget.cpp  machine_widget.h  machine_widget.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  p_gui_virtual_machine.cpp  p_gui_virtual_machine.h  pguivirtualmachine.h  program_image_widget.cpp  program_image_widget.h  program_image_widget.ui
(+39 files in other folders)
